--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.6",
     "react": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-date-picker": "^4.3.5",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.0",
